# ESPAlert

./: .dockerignore  .env.example  .gitignore  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  test_temp.py
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  writer.py
apps/api/app/: config.py  database.py  dependencies.py  main.py
apps/api/app/connectors/: aemet.py  base.py  dgt.py  ign.py  meshtastic.py  meteoalarm.py
apps/api/app/models/: __init__.py  alert.py  enums.py  fetch_log.py  mesh_message.py  push_subscription.py  user.py  user_favorite.py  user_preferences.py
apps/api/app/routers/: __init__.py  admin.py  alerts.py  auth.py  forecast.py  health.py  mesh.py  push.py  user.py  ws.py
apps/api/app/schemas/: __init__.py  alert.py  alerts.py  auth.py  fetch_log.py  mesh_message.py  push_subscripion.py  push_subscription.py  ws.py
apps/api/app/services/: __init__.py  alert_service.py  auth_service.py  mesh_service.py  push_service.py  websocket_manager.py
apps/api/app/utils/: geo.py  regions.py  xml_parser.py
apps/api/app/workers/: celerity_app.py  celery_app.py  tasks.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: a1b2c3d4e5f6_initial_schema.py  b2c3d4e5f6a7_add_users_and_preferences.py  c3d4e5f6a7b8_add_user_role.py  d4e5f6a7b8c9_add_user_favorites.py
apps/api/tests/: conftest.py  test_admin.py  test_aemet.py  test_auth.py  test_config.py  test_connectors.py  test_dgt.py  test_health.py  test_push.py  test_tasks.py  test_user.py  test_xml_parser.py
(+68 files in other folders)
