[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "espalert-api"
version = "0.1.0"
description = "Backend API para ESPAlert – sistema de alertas multi-riesgo en tiempo real"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
